Use Integer cache