@@ -281,14 +281,14 @@ public class MethodUtilsTestCase extends TestCase {
         value = MethodUtils.invokeStaticMethod(TestBean.class, "currentCounter", new Object[0]);
         assertEquals("currentCounter value", current, ((Integer) value).intValue());
 
-        MethodUtils.invokeStaticMethod(TestBean.class, "incrementCounter", new Object[] { new Integer(8) } );
+        MethodUtils.invokeStaticMethod(TestBean.class, "incrementCounter", new Object[] { Integer.valueOf(8) } );
         current += 8;
 
         value = MethodUtils.invokeStaticMethod(TestBean.class, "currentCounter", new Object[0]);
         assertEquals("currentCounter value", current, ((Integer) value).intValue());
 
         MethodUtils.invokeExactStaticMethod(TestBean.class, "incrementCounter",
-            new Object[] { new Integer(8) }, new Class[] { Number.class } );
+            new Object[] { Integer.valueOf(8) }, new Class[] { Number.class } );
         current += 16;
 
         value = MethodUtils.invokeStaticMethod(TestBean.class, "currentCounter", new Object[0]);
@@ -346,7 +346,7 @@ public class MethodUtilsTestCase extends TestCase {
             // Increment via specified-argument version
             MethodUtils.invokeMethod
                 (bean, "incrementCounter",
-                 new Object[] { new Integer(5) },
+                 new Object[] { Integer.valueOf(5) },
                  new Class[] { Integer.TYPE });
 
             // Validate updated value
@@ -405,7 +405,7 @@ public class MethodUtilsTestCase extends TestCase {
             // Increment via specified-argument version
             MethodUtils.invokeExactMethod
                 (bean, "incrementCounter",
-                 new Object[] { new Integer(5) },
+                 new Object[] { Integer.valueOf(5) },
                  new Class[] { Integer.TYPE });
 
             // Validate updated value
@@ -505,7 +505,7 @@ public class MethodUtilsTestCase extends TestCase {
                          ((Integer) value).intValue());
 
             // Increment via specified-argument version
-            incrementCounterMethod2.invoke(null, new Integer(5));
+            incrementCounterMethod2.invoke(null, Integer.valueOf(5));
 
             // Validate updated value
             current += 5;
