@@ -94,7 +94,7 @@ public class BigIntegerConverterTestCase extends NumberConverterTestBase<BigInte
             String.valueOf(Long.MAX_VALUE),
             new Byte((byte)7),
             new Short((short)8),
-            new Integer(9),
+            Integer.valueOf(9),
             new Long(10),
             new Float(11.1),
             Double.valueOf(12.2)
