@@ -92,7 +92,7 @@ public class DoubleConverterTestCase extends NumberConverterTestBase<Double> {
             String.valueOf(Double.MAX_VALUE),
             new Byte((byte)7),
             new Short((short)8),
-            new Integer(9),
+            Integer.valueOf(9),
             new Long(10),
             new Float(11.1),
             Double.valueOf(12.2)
