@@ -114,7 +114,7 @@ public class FloatConverterTestCase extends NumberConverterTestBase<Float> {
             String.valueOf(Float.MAX_VALUE),
             new Byte((byte)7),
             new Short((short)8),
-            new Integer(9),
+            Integer.valueOf(9),
             new Long(10),
             new Float(11.1),
             Double.valueOf(12.2),
