@@ -107,13 +107,13 @@ public abstract class NumberConverterTestBase<T extends Number> extends TestCase
         final Object[] number = {
             new Byte((byte)7),
             new Short((short)8),
-            new Integer(9),
+            Integer.valueOf(9),
             new Long(10),
             new Float(11.1),
             Double.valueOf(12.2),
             new BigDecimal("17.2"),
             new BigInteger("33"),
-            new Integer[] {new Integer(3), new Integer(2), new Integer(1)}
+            new Integer[] {Integer.valueOf(3), Integer.valueOf(2), Integer.valueOf(1)}
         };
 
         for(int i=0;i<number.length;i++) {
@@ -279,14 +279,14 @@ public abstract class NumberConverterTestBase<T extends Number> extends TestCase
      * Convert Array --> Number
      */
     public void testStringArrayToInteger() {
-        final Integer defaultValue = new Integer(-1);
+        final Integer defaultValue = Integer.valueOf(-1);
         final NumberConverter converter = new IntegerConverterTestCase("test").makeConverter(defaultValue);
 
         // Default Locale
-        assertEquals("Valid First",   new Integer(5), converter.convert(Integer.class, new String[] {"5", "4", "3"}));
+        assertEquals("Valid First",   Integer.valueOf(5), converter.convert(Integer.class, new String[] {"5", "4", "3"}));
         assertEquals("Invalid First", defaultValue,   converter.convert(Integer.class, new String[] {"FOO", "1", "2"}));
         assertEquals("Null First",    defaultValue,   converter.convert(Integer.class, new String[] {null, "1", "2"}));
-        assertEquals("Long Array",    new Integer(9), converter.convert(Integer.class, new long[] {9, 2, 6}));
+        assertEquals("Long Array",    Integer.valueOf(9), converter.convert(Integer.class, new long[] {9, 2, 6}));
     }
 
     /**
