@@ -136,7 +136,7 @@ public class SqlTimestampConverterTestCase extends DateConverterTestBase<Timesta
         invalidConversion(converter, "13:05 pm");
         invalidConversion(converter, "11:05 p");
         invalidConversion(converter, "11.05 pm");
-        invalidConversion(converter, new Integer(2));
+        invalidConversion(converter, Integer.valueOf(2));
 
         // Restore the default Locale
         Locale.setDefault(defaultLocale);
