@@ -32,8 +32,8 @@ public class IntegerLocaleConverterTestCase extends BaseLocaleConverterTestCase<
     @Override
     public void setUp() throws Exception {
         super.setUp();
-        defaultValue  = new Integer("999");
-        expectedValue = new Integer(expectedIntegerValue);
+        defaultValue  = Integer.valueOf("999");
+        expectedValue = Integer.valueOf(expectedIntegerValue);
     }
 
     /**
@@ -66,7 +66,7 @@ public class IntegerLocaleConverterTestCase extends BaseLocaleConverterTestCase<
         // quite happily turning "1,234" into "1"
         // I guess this is one of the limitations of DecimalFormat
         // **************************************************************************
-        convertValueNoPattern(converter, "(B)", defaultIntegerValue, new Integer("1"));
+        convertValueNoPattern(converter, "(B)", defaultIntegerValue, Integer.valueOf("1"));
 
         // **************************************************************************
         // Convert with non-localized pattern - unlike the equivalent BigDecimal Test Case
@@ -74,7 +74,7 @@ public class IntegerLocaleConverterTestCase extends BaseLocaleConverterTestCase<
         // quite happily turning "1,234" into "1"
         // Again this is one of the limitations of DecimalFormat
         // **************************************************************************
-        convertValueWithPattern(converter, "(B)", localizedIntegerValue, defaultIntegerPattern, new Integer("1"));
+        convertValueWithPattern(converter, "(B)", localizedIntegerValue, defaultIntegerPattern, Integer.valueOf("1"));
 
         // **************************************************************************
         // Convert with specified type
@@ -222,7 +222,7 @@ public class IntegerLocaleConverterTestCase extends BaseLocaleConverterTestCase<
         // ------------- Construct using specified Locale --------
         converter = new IntegerLocaleConverter(localizedLocale);
 
-        final Integer value = new Integer(1234);
+        final Integer value = Integer.valueOf(1234);
         assertEquals("Convert Integer", value, converter.convert(value));
         assertEquals("Convert Long",    value, converter.convert(new Long(value.intValue())));
     }
